// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`says the ballot sheet is blank if it is 1`] = `
<div>
  <div
    class="sc-VigVT djCdRx"
  >
    <div
      class="sc-bZQynM cWyHmc"
    >
      <div
        class="sc-gzVnrw iMtlFY"
      >
        <div
          class="sc-htoDjs fdtLZY"
        >
          <div
            class="sc-dnqmqq kKbVPv"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-iwsKbI jQhHGA"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-gZMcBi idZcZf"
        >
          <button
            class="sc-ifAKCX cAdBCb"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-bwzfXH hLOwzs"
      >
        <div
          class="sc-jTzLTM TMzWq"
        >
          <div
            class="sc-htpNat eawaaV"
          >
            <h1>
              Review Required
            </h1>
            <p>
              This last scanned sheet requires human review and
               
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <h4>
              Reason
            </h4>
            <p>
              <span>
                Reason could not be determined.
              </span>
            </p>
            <h4>
              Original Ballot Scan
            </h4>
            <p>
              Remove ballot and create a duplicate ballot for the Resolution Board to review.
              <br />
              <button
                class="sc-ifAKCX hViQmt"
                type="button"
              >
                Original Ballot Removed
              </button>
            </p>
            <h4>
              Duplicate Ballot Scan
            </h4>
            <p>
              Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballow with issue which could not be determined.
              <br />
              <button
                class="sc-ifAKCX hViQmt"
                type="button"
              >
                Tabulate Duplicate Ballot
              </button>
            </p>
          </div>
          <div
            class="sc-fjdhpX bnPSvT"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`says the ballot sheet is overvoted if it is 1`] = `
<div>
  <div
    class="sc-VigVT djCdRx"
  >
    <div
      class="sc-bZQynM cWyHmc"
    >
      <div
        class="sc-gzVnrw iMtlFY"
      >
        <div
          class="sc-htoDjs fdtLZY"
        >
          <div
            class="sc-dnqmqq kKbVPv"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-iwsKbI jQhHGA"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-gZMcBi idZcZf"
        >
          <button
            class="sc-ifAKCX cAdBCb"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-bwzfXH hLOwzs"
      >
        <div
          class="sc-jTzLTM TMzWq"
        >
          <div
            class="sc-htpNat eawaaV"
          >
            <h1>
              Review Required
            </h1>
            <p>
              This last scanned sheet requires human review and
               
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <h4>
              Reason
            </h4>
            <p>
              <span>
                This ballot sheet contains an 
                <strong>
                  overvote
                </strong>
                .
              </span>
            </p>
            <h4>
              Original Ballot Scan
            </h4>
            <p>
              Remove ballot and create a duplicate ballot for the Resolution Board to review.
              <br />
              <button
                class="sc-ifAKCX hViQmt"
                type="button"
              >
                Original Ballot Removed
              </button>
            </p>
            <h4>
              Duplicate Ballot Scan
            </h4>
            <p>
              Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballot sheet with an
               
              <strong>
                ovevote
              </strong>
              .
              <br />
              <button
                class="sc-ifAKCX hViQmt"
                type="button"
              >
                Tabulate Duplicate Ballot
              </button>
            </p>
          </div>
          <div
            class="sc-fjdhpX bnPSvT"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`says the sheet is unreadable if it is 1`] = `
<div>
  <div
    class="sc-VigVT djCdRx"
  >
    <div
      class="sc-bZQynM cWyHmc"
    >
      <div
        class="sc-gzVnrw iMtlFY"
      >
        <div
          class="sc-htoDjs fdtLZY"
        >
          <div
            class="sc-dnqmqq kKbVPv"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-iwsKbI jQhHGA"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-gZMcBi idZcZf"
        >
          <button
            class="sc-ifAKCX cAdBCb"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-bwzfXH hLOwzs"
      >
        <div
          class="sc-jTzLTM TMzWq"
        >
          <div
            class="sc-htpNat eawaaV"
          >
            <h1>
              Review Required
            </h1>
            <p>
              This last scanned sheet requires human review and
               
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <h4>
              Reason
            </h4>
            <p>
              <span>
                This sheet was 
                <strong>
                  unreadable
                </strong>
                 by the scanner.
              </span>
            </p>
            <h4>
              Original Ballot Scan
            </h4>
            <p>
              Remove ballot and create a duplicate ballot for the Resolution Board to review.
              <br />
              <button
                class="sc-ifAKCX hViQmt"
                type="button"
              >
                Original Ballot Removed
              </button>
            </p>
            <h4>
              Duplicate Ballot Scan
            </h4>
            <p>
              Confirm sheet was reviewed by the Resolution Board and tabulate as 
              <strong>
                unreadable
              </strong>
              .
              <br />
              <button
                class="sc-ifAKCX hViQmt"
                type="button"
              >
                Tabulate Duplicate Ballot
              </button>
            </p>
          </div>
          <div
            class="sc-fjdhpX bnPSvT"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
